k8s/k8s-channel-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: channel-gateway-service
  labels:
    app: channel-gateway
spec:
  type: ClusterIP
  selector:
    app: channel-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: channel-gateway-deployment
  labels:
    app: channel-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: channel-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: channel-gateway
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: api
          image: pipem114/api-gateway-arqui:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10 # Equivalente a start_period
            periodSeconds: 5
            failureThreshold: 12 # 10s + (12 * 5s) = 70s para arrancar
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 30 # Equivalente a interval
            timeoutSeconds: 5 # Equivalente a timeout
            failureThreshold: 5 # Equivalente a retries
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
